Devise authorization system configured

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<div class="starter-template">
+	<h1>Sublime Text settings saver</h1>
+	<p class="lead">This is about saving your Sublime Text <br> settings and share them between your <br> devices at home and work</p>
+</div>
