--- a/app/assets/stylesheets/application.scss.css
+++ b/app/assets/stylesheets/application.scss.css
@@ -14,4 +14,6 @@
  *= require_self
  */
 
-@import "bootstrap-sass-official/assets/stylesheets/_bootstrap";
+@import "bootstrap-sass-official/assets/stylesheets/_bootstrap-sprockets";
+@import 'bootstrap-sass-official/assets/stylesheets/_bootstrap';
+@import 'common';
